--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Paint96</title>
 </head>
 <body>
 	<div class="main-container">
